# challengeCUP

./: README.md
3d_model_rendering/: CMakeLists.txt  camera.cpp  camera.h  inspector.cpp  inspector.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  opglwindow.cpp  opglwindow.h  utility.h
3d_model_rendering/rec/: README.md  shader.qrc
3d_model_rendering/rec/fshader/: singleColor.glsl
3d_model_rendering/rec/vshader/: vshader.glsl
PointCloudOperate/: CMakeLists.txt  config.xml  kinect2_grabber.h  mainwindow.cpp  mainwindow.h  readConfig.h  utility.h
imgTo3DCoor/: CMakeLists.txt  kinect2_grabber.h  main.cpp  myMath.h
point_cloud_grabber_reconstruct/: Readme.md
point_cloud_grabber_reconstruct/client/: CMakeLists.txt  Client.cpp  Client.h  config.xml  mainwindow.cpp  mainwindow.h  readConfig.cpp  readConfig.h
point_cloud_grabber_reconstruct/host/: CMakeLists.txt  HostSocket.cpp  HostSocket.h  main.cpp  transform.h
sift+icp/: CMakeLists.txt  kinect2_grabber.h  main.cpp  myMath.h
transformMatrixGen/client/: CMakeLists.txt  Client.cpp  Client.h  MyMath.h  ReadIP.h  ips.xml  main.cpp
transformMatrixGen/host/: CMakeLists.txt  Host.cpp  Host.h  kinect2_grabber.h  main.cpp  tinyxml2.h
turningTable/: CMakeLists.txt  kinect2_grabber.h  main.cpp
